docs: Added authorization method to swaggerUI such that test API inside it.
