# docs/api/swagger.json
@@ -15,6 +15,11 @@
     "paths": {
         "/docs": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuths": []
+                    }
+                ],
                 "description": "Create document for specified event and current user in the current time and return its id.",
                 "consumes": [
                     "application/json"
@@ -1243,7 +1248,7 @@
         }
     },
     "securityDefinitions": {
-        "BearerAuth": {
+        "BearerAuths": {
             "type": "apiKey",
             "name": "Authorization",
             "in": "header"
